--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -4,11 +4,12 @@
 .testebackgroud
 {
     display: flex;
-    border: 2px solid blue;
+    border: 2px solid rgb(255, 0, 179);
     width: 100%;
     height: 0%;
-    flex-wrap: wrap;
+    flex-direction: column;
     color: red;
+    justify-content: space-around;
 }
 
 h1
@@ -21,20 +22,28 @@ h1
 
 .listaDaDireita
 {
-border: 2px solid rgb(247, 243, 243);
+display: flex;
+border: 2px solid rgb(133, 32, 32);
 width: 80vw;
+flex-direction: column;
+justify-content: space-around;
+margin: auto;
 }
 
 .itens_do_carrinho
 {
-    padding: 1%;
-    border: 2px solid blue;
+    
+    padding: 0%;
+    border: 2px solid rgb(150, 158, 37);
+    margin-bottom: 2%;
+    height: 200px;
 }
 
 .bucador_de_cep
 {
     padding: 1%;
     border: 2px solid blue;
+    margin-bottom: 3%;
 }
 
 .listaDaEsquerda
@@ -42,9 +51,60 @@ width: 80vw;
     border: 2px solid blue;
     width: 100%;
     height: 100px;
+    margin: auto;
 
 }
-/************/
+
+.caixa_botao_de_exluir_item
+{
+   
+display: flex;
+justify-content: flex-end;
+}
+
+.botao_de_exluir_item
+{
+    background-color: #F59E3B;
+    width: 20px;
+    border-radius: 50%;
+    border: none;
+}
+
+.primeira_sessao_de_itens
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+.valor_da_quantidade_de_itens_do_carrinho
+{
+    width: 10%;
+}
+
+.botao_de_menos_itens_do_carrinho
+{
+    width: 10%;
+}
+
+.botao_de_mais_itens_do_carrinho
+{
+    width: 10%;
+}
+
+.segunda_sessao_de_itens
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-top: 10%;
+}
+
+    /************/
 
 /******************* @media ****************************/
 
@@ -53,22 +113,23 @@ width: 80vw;
     .testebackgroud
     {
         display: flex;
-        border: 2px solid blue;
+        border: 2px solid rgb(15, 177, 15);
         width: 99%;
         height: 220px;
-        justify-content: space-between;
+        
     }
 
     .listaDaDireita
 {
-border: 2px solid rgb(247, 243, 243);
-width: 60vw;
+border: 2px solid rgb(168, 23, 23);
+width: 99%;
 }
 
 .listaDaEsquerda
 {
     border: 2px solid blue;
-    width: 33%;
+    width: 99%;
+    
 
 }
     
@@ -81,8 +142,9 @@ width: 60vw;
 
     .testebackgroud
     {
+        display: flex;
         border: 2px solid blue;
-
+        flex-direction: row;
         width: 99%;
         height: 220px;
     }
@@ -95,10 +157,41 @@ width: 60vw;
 
 .listaDaDireita
 {
-border: 2px solid rgb(247, 243, 243);
-width: 60vw;
+display: flex;
+border: 2px solid rgb(150, 27, 119);
+width: 70%;
+padding: 1%;
+flex-direction: column;
+justify-content: space-around;
+height: 99%;
 }
 
+.listaDaEsquerda
+{
+    border: 2px solid blue;
+    width: 30%;
+    height: 99%;
+    
+
+}
+
+.linha_de_itens
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.segunda_sessao_de_itens
+{
+
+    margin-top: 0%;
+}
+
+.um_espacinho
+{
+    margin-left: 12%;
+}
     /************/
 }
 
