--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -1,210 +1,177 @@
-/*@Alisson*/
+/*@Alisson continuar no dia 22/06*/
 
 /*** Main ***/
-.testebackgroud
+.container_pai_de_todos
 {
     display: flex;
-    border: 2px solid rgb(255, 0, 179);
-    width: 100%;
-    height: 0%;
     flex-direction: column;
-    color: red;
-    justify-content: space-around;
+    border: 2px solid black;
+    height: 700px;
+    
 }
 
-h1
+.h1_carrinho
 {
     display: flex;
-    justify-content:center;
-    padding-bottom: 1.5%;
-
-}
-
-.listaDaDireita
-{
-display: flex;
-border: 2px solid rgb(133, 32, 32);
-width: 80vw;
-flex-direction: column;
-justify-content: space-around;
-margin: auto;
-}
-
-.itens_do_carrinho
-{
-    
-    padding: 0%;
-    border: 2px solid rgb(150, 158, 37);
-    margin-bottom: 2%;
-    height: 200px;
-}
-
-.bucador_de_cep
-{
+    justify-content: center;
     padding: 1%;
-    border: 2px solid blue;
-    margin-bottom: 3%;
 }
 
-.listaDaEsquerda
-{
-    border: 2px solid blue;
-    width: 100%;
-    height: 100px;
-    margin: auto;
 
+
+
+/*** inicio do css da caixa de itens "class=itens_da_lista" ***/
+.pai_dos_itens
+{
+    display: flex;
+    flex-direction: column;
+    border: 5px solid #F59E3B;
+    border-radius: 10px;
+    
 }
 
 .caixa_botao_de_exluir_item
 {
-   
 display: flex;
 justify-content: flex-end;
-}
+padding: 2%;
 
+}
 .botao_de_exluir_item
 {
+    width: 8%;
     background-color: #F59E3B;
-    width: 20px;
-    border-radius: 50%;
+    border-radius: 10px;
     border: none;
 }
+
 
 .primeira_sessao_de_itens
 {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-left: 1%;
-    padding-right: 1%;
-}
-
-.valor_da_quantidade_de_itens_do_carrinho
-{
-    width: 10%;
-}
-
-.botao_de_menos_itens_do_carrinho
-{
-    width: 10%;
-}
-
-.botao_de_mais_itens_do_carrinho
-{
-    width: 10%;
 }
 
 .segunda_sessao_de_itens
 {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-top: 10%;
+    align-items: center;
+    padding: 10%;
 }
 
-    /************/
+.valor_da_quantidade_de_itens_do_carrinho
+{
+    width: 15%;
+}
+
+.itens_da_lista
+{
+    list-style: none;
+}
+
+.botao_de_menos_itens_do_carrinho
+{
+    width: 15%;
+}
+.botao_de_mais_itens_do_carrinho
+{
+    width: 15%;
+}
+
+/*** fim do css da caixa de itens ***/
+
+/*** inicio do css da caixa de buscar cep class=bucador_de_cep***/
+
+.bucador_de_cep
+{
+    border: 5px solid #F59E3B;
+    border-radius: 10px;
+    margin-top: 1%;
+    padding: 2%;
+}
+
+.form_pesquisa_cep
+{
+    display: flex;
+    width: 100%;
+    background-color: #F59E3B;
+    padding: 3%;
+    border-radius: 10px;
+    
+}
+
+.barra_pesquisa_cep
+{
+    width: 100%;
+    font-size: 85%;
+    border-radius: 4px;
+    border: none;
+    background: none;
+    color: #fff;
+}
+
+.button_pesquisa_cep
+{
+    background: #fff;
+    border-radius: 10px;
+    width: 50%;
+    border: none;
+}
+
+/*** fim do css da caixa de buscar cep class=bucador_de_cep***/
+
+/*** inicio do css da caixa de continuar_comprando class=continuar_comprando***/
+
+
+.continuar_comprando
+{
+    display: flex;
+    justify-content: center;
+    border: 5px solid #F59E3B; 
+    border-radius: 10px;
+    padding: 2%;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #F59E3B;
+    margin: 1%;
+    font-weight: bold;
+}
+
+/*** fim do css da caixa de continuar_comprando class=continuar_comprando***/
+.subtotal
+{
+    border: 5px solid #F59E3B;
+    border-radius: 10px;
+    height: 100px;
+}
+/*** inicio do css da caixa de subtotal class=subtotal***/
+
+
+
+/*** fim do css da caixa de subtotal class=subtotal***/
+
+/************/
 
 /******************* @media ****************************/
 
 @media (min-width: 481px) {
-    /*** Main "TELA DE MOBILE" ***/  
-    .testebackgroud
-    {
-        display: flex;
-        border: 2px solid rgb(15, 177, 15);
-        width: 99%;
-        height: 220px;
-        
-    }
+    /*** Main ***/
 
-    .listaDaDireita
-{
-border: 2px solid rgb(168, 23, 23);
-width: 99%;
-}
-
-.listaDaEsquerda
-{
-    border: 2px solid blue;
-    width: 99%;
-    
-
-}
-    
     /************/
 }
 
 
 @media (min-width: 769px) {
-    /*** Main "TELA DE TABLET" ***/
+    /*** Main ***/
 
-    .testebackgroud
-    {
-        display: flex;
-        border: 2px solid blue;
-        flex-direction: row;
-        width: 99%;
-        height: 220px;
-    }
-
-    h1
-{
-    padding-top: 1%;
-
-}
-
-.listaDaDireita
-{
-display: flex;
-border: 2px solid rgb(150, 27, 119);
-width: 70%;
-padding: 1%;
-flex-direction: column;
-justify-content: space-around;
-height: 99%;
-}
-
-.listaDaEsquerda
-{
-    border: 2px solid blue;
-    width: 30%;
-    height: 99%;
-    
-
-}
-
-.linha_de_itens
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.segunda_sessao_de_itens
-{
-
-    margin-top: 0%;
-}
-
-.um_espacinho
-{
-    margin-left: 12%;
-}
     /************/
 }
 
 
 @media (min-width: 1280px) {
-    /*** Main   "TELA DE COMPUTADOR" ***/
-    .testebackgroud
-    {
-        border: 2px solid blue;
-        background-color: rgb(236, 226, 226);
-        width: 99%;
-        height: 220px;
-    }
+    /*** Main ***/
+
     /************/
 }
 
