--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -5,20 +5,22 @@
 #login-container{
     width: 350px;
     border: none;
-    height: 250px;
+    height: 500px;
     padding: 0%;
-    margin: 30%;
+    margin: auto;
 }
 
-#form{
+.meus_dados{
+    font-size: 25px;
+    color: #F59E3B;
 
 
 }
 
 label, input{
     display: block;
-    width: 90%;
-    height:20%;
+    width: 100%;
+    height:30px;
     text-align: left;
     border-radius: 10px;
 }  
@@ -28,28 +30,19 @@ label{
 }
 
 
-#botao-login-entrar{
+#botao-cadastro{
+margin-left: 80px;    
 text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 border: none;
-height: 40px;
-width: 100px;
+height: 50px;
+width: 150px;
 border-radius: 20px;
 color: #323232;
 background-color: #00A000;
-cursor: pointer;
-
-   
+cursor: pointer;   
 }
-
-#botao-login-criar_conta{
-color: #F59E3B;
-
-
-}
-
-
 
 
 /************/
@@ -65,14 +58,18 @@ color: #F59E3B;
 
 @media (min-width: 769px) { 
     /*** Main ***/
-
+    .meus_dados{
+        margin-top: 10%;
+    }
     /************/
 }
 
 
 @media (min-width: 1280px) {
     /*** Main ***/
-
+    .meus_dados{
+        margin-top: 10%;
+    }
     /************/
 }
 
