--- a/css/base.css
+++ b/css/base.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 1rem;
+    font-size: 16px;
     font-family: 'Rajdhani', sans-serif;
 }
 
@@ -48,7 +48,8 @@ header {
     border-bottom: 5px solid #FF914D;    
     box-shadow: 0 0 1em #999;
     width: 100%;
-    background-color: #fff;     
+    background-color: #fff; 
+    z-index: 15;    
 }
 
 header .container nav {
