--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,74 @@
 /*@Fernando / @Weslley*/
 
 /*** Carrossel **/
-    .div-carrossel {
-        padding-top: 74px;
-    }
+.div-carrossel {
+    position: relative;
+    padding-top: 130px;
+    width: 100%;
+    overflow: hidden;        
+}
+
+.div-carrossel .div-carrossel-slides {
+    display: flex;
+    position: relative;
+    width: 200%;
+    height: 100%;        
+}
+
+#slide-carrossel-1, #slide-carrossel-2 {
+    display: none;
+}
+
+.div-carrossel .div-carrossel-slides .slide {
+    width: 50%;
+    transition: 0.6s;
+}
+
+.div-carrossel .div-carrossel-slides .slide img{
+    width: 100%;
+    height: 100%;
+}
+
+.div-carrossel .barra-navegacao-slides {
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    left: 50%; 
+    transform: translate(-50%);     
+}
+
+.div-carrossel .barra-navegacao-slides .btn-barra-navegacao-slides{
+    width: 60px;
+    height: 17px;
+    border: 2px solid #fff;
+    margin-left: 6px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;        
+}
+
+.div-carrossel .barra-navegacao-slides .btn-barra-navegacao-slides:hover {        
+    border-color: #ed7d31;
+}
+
+#slide-carrossel-1:checked ~ .div-carrossel .div-carrossel-slides .slide1 {
+    margin-left: 0;        
+}   
+
+#slide-carrossel-2:checked ~ .div-carrossel .div-carrossel-slides .slide1 {
+    margin-left: -50%;        
+}
+
+#slide-carrossel-1:checked ~ .div-carrossel .barra-navegacao-slides .btn-slide-1 {
+    background-color: #ed7d31;
+    border-color: #ed7d31;
+} 
+
+#slide-carrossel-2:checked ~ .div-carrossel .barra-navegacao-slides .btn-slide-2 {
+    background-color: #ed7d31;
+    border-color: #ed7d31;
+}    
+
 /****************/
 
 
@@ -28,7 +93,9 @@
 
 @media (min-width: 769px) {
     /*** Carrossel **/
-
+    .div-carrossel {
+        padding-top: 149px;
+    }
     /****************/
 
 
