--- a/css/produto.css
+++ b/css/produto.css
@@ -1,26 +1,223 @@
-/*@Shami*/
+main div div .home-produto {
+    display: flex;
+    margin-top: 1%;
+    margin-left: 1%;
+    justify-content: space-around;
+    justify-items: flex-start;
+    width: 13%;
+    color: #333;
 
-/*** Main ***/
+}
+.paginaproduto div div section .img-nome-valor-comprar {
+    display: flex;
+    border-radius: 8px;
+    box-shadow: 3px 2px 10px 4px #888;
+    justify-content: space-around;
+    margin: 1%;
+}
 
-/************/
+.paginaproduto div div section .img-nome-valor-comprar .small-img {
+    display: flex;
+    flex-flow: column;
+    width: 10%;
+    margin: 1%;
+    justify-content: flex-start;
+}
+.paginaproduto div div section .img-nome-valor-comprar .main-img {
+    margin: 1%;
+}
 
-/******************* @media ****************************/
 
-@media (min-width: 481px) {
+.paginaproduto div div section .img-nome-valor-comprar .small-img img {
+    width: 60px;
+    margin-bottom: 3px;
+
+
+}
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar {
+
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    width: 70%;
+    margin: 1%;
+
+}
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .nome-produto {
+    font-weight: 600;
+    font-size: 0.831rem;
+    color: #333;
+
+}
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .valor-produto {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+
+}
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .valor-produto .valor-anterior {
+    color: #333;
+    font-size: 1rem;
+
+}
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .valor-produto .valor-atual {
+    font-size: 1.25rem;
+    color: #00A000;
+
+
+}
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .valor-produto .valor-parcelado {
+    font-size: 1.1;
+    font-weight: 500;
+    color: #333;
+}
+
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .valor-produto p {
+    margin-top: 0.4%;
+    margin-bottom: 0.4%;
+}
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .button-produto {
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #FF914D;
+    background-color: #FF914D;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+    
+
+}
+.paginaproduto div div section {
+    display: flex;
+    flex-flow: column;
+}
+.paginaproduto div div section .descricao-produto {
+    border-radius: 8px;
+    box-shadow: 3px 2px 10px 4px #888;
+    margin: 1%;
+    display: flex;
+    flex-flow: column;
+
+}
+
+.paginaproduto div div section .descricao-produto p {
+    margin: 2%;
+}
+.paginaproduto div div section .descricao-produto .descricao-main {
+    color: #333;
+    border-bottom: 1px solid #333;
+    padding-bottom: 1%;
+    width: 30%;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+.paginaproduto div div section .descricao-produto .descricao-geral {
+    color: #333;
+    font-size: 1rem;
+
+}
+
+.paginaproduto div div .mais-produtos {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 1%;
+    margin-bottom: 1%;
+
+}
+.paginaproduto div div .veja-tambem {
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+
+}
+.paginaproduto div div .mais-produtos .produto {
+    border-radius: 7px;
+    box-shadow: 3px 2px 10px 4px #888;
+    padding: 20px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+
+}
+.paginaproduto div div .mais-produtos .produto .img-produto img{
+    width: 90%;
+    margin-left: 5%;
+    margin-bottom: 10%;
+
+
+
+}
+.paginaproduto div div .mais-produtos .produto .nome-produto .nome-produto {
+    font-weight: 600;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 3%;
+}
+.paginaproduto div div .mais-produtos .produto .valor-anterior .valor-anterior {
+    font-size: 0.8rem;
+    color: #333;
+    margin-bottom: 3%;
+}
+.paginaproduto div div .mais-produtos .produto .valor-atual .valor-atual {
+    font-size: 1rem;
+    color: #00A000;
+    font-weight: bold;
+    margin-bottom: 3%;
+}
+.paginaproduto div div .mais-produtos .produto .valor-parcelado .valor-parcelado {
+    font-size: 0.9rem;
+    color: #333;
+    font-weight: 500;
+    margin-bottom: 3%;
+}
+.paginaproduto div div .mais-produtos .produto .button-produto {
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #FF914D;
+    background-color: #FF914D;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 5%;
+
+}
+
+
+
+
+
+
+@media (mx-width: 481px) {
     /*** Main ***/
 
     /************/
 }
 
 
-@media (min-width: 769px) { 
+@media (max-width: 769px) { 
     /*** Main ***/
 
     /************/
 }
 
 
-@media (min-width: 1280px) {
+@media (max-width: 1280px) {
     /*** Main ***/
 
     /************/
