--- a/css/cards.css
+++ b/css/cards.css
@@ -1,15 +1,3 @@
-.home-section-titulos {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.25rem;        
-}
-
-.home-section-titulos span {
-    font-size: 1.25rem;
-    margin-right: 5px;
-} 
-
 .div-cards-principal {    
     display: flex;
     flex-direction: row;
@@ -129,8 +117,13 @@
     }
 }
 
+@media (min-width: 700px) {    
+    .div-cards-principal .div-cards .card {           
+        width: 280px;      
+    }
+}
 
-@media (min-width: 768px) { 
+@media (min-width: 769px) { 
     .home-section-titulos {        
         font-size: 1.5rem;        
     }
@@ -144,13 +137,17 @@
     }
 }
 
-
-@media (min-width: 900px) {
+@media (min-width: 800px) {    
     .div-cards-principal .div-cards .card {           
-        width: 350px;      
+        width: 330px;      
     }
 }
 
+@media (min-width: 900px) {
+    .div-cards-principal .div-cards .card {           
+        width: 370px;      
+    }
+}
 
 @media (min-width: 1024px) {     
     .home-section-titulos {        
@@ -169,16 +166,6 @@
 
 
 @media (min-width: 1280px) { 
-    .home-section-titulos {
-        justify-content: flex-start;        
-        font-size: 2rem;
-        margin: 40px 0 20px 10px;        
-    }
-    
-    .home-section-titulos span {
-        font-size: 2rem;        
-    } 
-
     .div-cards-principal .div-cards .card {           
         width: 265px;      
     }
