Separamos pagina footer e pagina header, dentro da pasta partials. Criamos pasta controller , pasta de router, alteramos as imgs da pasta

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,19 +2,19 @@
     <div class="div-footer-config">
         <div class="div-informacoes">
             <div class="div-media-pagamento">
-                <img src="./img/logo.svg" alt="Imagem logo da empresa.">
+                <img src="/images/logo.svg" alt="Imagem logo da empresa.">
                 <div class="div-social">
                     <ul>
-                        <li><a href="#"><img src="./img/img-facebook.svg" alt="Imagem logo facebook"></a></li>
-                        <li><a href="#"><img src="./img/img-twitter.svg" alt="Imagem logo twitter"></a></li>
-                        <li><a href="#"><img src="./img/img-instagram.svg" alt="Imagem logo instagrm"></a></li>
-                        <li><a href="#"><img src="./img/img-youtube.svg" alt="Imagem logo youtube"></a></li>
-                        <li><a href="#"><img src="./img/img-linkedin.svg" alt="Imagem logo linkedin"></a></li>                            
+                        <li><a href="#"><img src="/images/img-facebook.svg" alt="Imagem logo facebook"></a></li>
+                        <li><a href="#"><img src="/images/img-twitter.svg" alt="Imagem logo twitter"></a></li>
+                        <li><a href="#"><img src="/images/img-instagram.svg" alt="Imagem logo instagrm"></a></li>
+                        <li><a href="#"><img src="/images/img-youtube.svg" alt="Imagem logo youtube"></a></li>
+                        <li><a href="#"><img src="/images/img-linkedin.svg" alt="Imagem logo linkedin"></a></li>                            
                     </ul>
                 </div>
                 <div class="div-forma-pagamento">
                     <h3>Forma de Pagamento</h3>
-                    <img src="./img/boleto.svg" alt="Imagem código de barra.">
+                    <img src="/images/boleto.svg" alt="Imagem código de barra.">
                 </div>
             </div>
             <div class="div-fale-conosco-horarios">
