--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,8 @@
                     <button class="btn-hamburger-mobile">                            
                         <span class="material-icons-outlined">menu</span>
                     </button>
-                    <a href="./index.html" class="link-logo-empresa"><img src="./img/logo.svg" alt="Imagem Logo TopSales6"></a>
-                    <a href="./index.html" class="link-logo-empresa-mobile"><img src="./img/logo2.svg" alt="Imagem Logo TopSales6"></a>
+                    <a href="./index.html" class="link-logo-empresa"><img src="/images/logo.svg" alt="Imagem Logo TopSales6"></a>
+                    <a href="./index.html" class="link-logo-empresa-mobile"><img src="/images/logo2.svg" alt="Imagem Logo TopSales6"></a>
                     <ul class="lista-menu">
                         <li>
                             <a href="./login.html"><span class="material-icons">account_circle</span>Minha Conta</a>
