--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TopSales6</title>
-    <link rel="shortcut icon" href="./img/fivicon.ico">
+    <link rel="shortcut icon" href="/images/fivicon.ico">
     <!--Fonte / Icons-->    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet">    
     <!--CSS-->
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/cards.css">
+    <link rel="stylesheet" href="/stylesheets/base.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/cards.css">
 </head>
 <body>  
     
@@ -30,12 +30,12 @@
     <section class="div-carrossel">
         <div class="div-carrossel-slides">
             <div class="slide slide1">
-                <img class="img-banner" src="./img/banner-pi-dh-1.png" alt="Banner de PC Gamer 30% Off">
-                <img class="img-banner-mobile" src="./img/banner-pi-dh-1-mobile.png" alt="Banner de PC Gamer 30% Off">                
+                <img class="img-banner" src="/images/banner-pi-dh-1.png" alt="Banner de PC Gamer 30% Off">
+                <img class="img-banner-mobile" src="/images/banner-pi-dh-1-mobile.png" alt="Banner de PC Gamer 30% Off">                
             </div>
             <div class="slide">
-                <img class="img-banner" src="./img/banner-pi-dh-2.png" alt="Banner de PC Gamer 30% Off">
-                <img class="img-banner-mobile" src="./img/banner-pi-dh-2-mobile.png" alt="Banner de PC Gamer 30% Off">
+                <img class="img-banner" src="/images/banner-pi-dh-2.png" alt="Banner de PC Gamer 30% Off">
+                <img class="img-banner-mobile" src="/images/banner-pi-dh-2-mobile.png" alt="Banner de PC Gamer 30% Off">
             </div> 
         </div>
         <div class="barra-navegacao-slides">
@@ -56,7 +56,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pc-gamer.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pc-gamer.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -73,7 +73,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -90,7 +90,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -107,7 +107,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pl-video.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pl-video.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -133,7 +133,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pc-gamer.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pc-gamer.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -150,7 +150,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -167,7 +167,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -184,7 +184,7 @@
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="./img/pl-video.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/pl-video.jpg" alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
                                     <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
