--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TopSales6</title>
-    <link rel="shortcut icon" href="./img/fivicon.ico">
+    <link rel="shortcut icon" href="/images/fivicon.ico">
     <!--Fonte / Icons-->    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   
@@ -15,52 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet">    
     <!--CSS-->
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/produto.css">
+    <link rel="stylesheet" href="/stylesheets/base.css">
+    <link rel="stylesheet" href="/stylesheets/produto.css">
 </head>
 <body>    
-    <header>
-        <div class="container">
-            <nav>
-                <div class="div-menu-1">
-                    <div>                        
-                        <button class="btn-hamburger-mobile">                            
-                            <span class="material-icons-outlined">menu</span>
-                        </button>
-                        <a href="./index.html" class="link-logo-empresa"><img src="./img/logo.svg" alt="Imagem Logo TopSales6"></a>
-                        <a href="./index.html" class="link-logo-empresa-mobile"><img src="./img/logo2.svg" alt="Imagem Logo TopSales6"></a>
-                        <ul class="lista-menu">
-                            <li>
-                                <a href="#"><span class="material-icons">account_circle</span>Minha Conta</a>
-                            </li>
-                            <li>
-                                <a href="#"><span class="material-icons-outlined">headset_mic</span>Central de Atendimento</a>
-                            </li>                            
-                        </ul>
-                    </div>                    
-                    <a href="./carrinho.html" class="link-carrinho">
-                        <span class="material-icons-outlined img-carrinho">shopping_cart</span>
-                        <span class="qt-item-carrinho">0</span>
-                    </a>                                        
-                </div>
-                <div class="div-menu-2">
-                    <div class="div-btn-departamentos">
-                        <button class="btn-departamentos">
-                            <span class="material-icons-outlined">menu</span> DEPARTAMENTOS
-                        </button>
-                        <span class="material-icons-outlined btn-departamentos-seta-para-baixo">arrow_drop_down</span>
-                    </div>
-                    <div class="div-barra-pesquisa">
-                        <form action="#" method="POST">
-                            <input class="barra-pesquisa" type="text" name="pesquisa-produto" placeholder="PESQUISE SEU PRODUTO">
-                            <span class="material-icons-outlined icon-lupa">search</span>
-                        </form>
-                    </div>                    
-                </div>
-            </nav>
-        </div>
-    </header> 
     
+    <%- include('./partials/header') %>
+
     
 
     <main class="paginaproduto">
@@ -75,12 +36,12 @@
                     <div class="img-nome-valor-comprar">
                         <div class="small-img">
 
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="main-img">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="nome-valor-comprar">
                             <div class="nome-produto">
@@ -125,7 +86,7 @@
                 <div class="mais-produtos">
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="nome-produto">
                             <p class="nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -148,7 +109,7 @@
                     </section>
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="nome-produto">
                             <p class="nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -171,7 +132,7 @@
                     </section>
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="nome-produto">
                             <p class="nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -194,7 +155,7 @@
                     </section>
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="./img/pc-gamer-mais-peças.jpg" alt="">
+                            <img src="/images/pc-gamer-mais-peças.jpg" alt="">
                         </div>
                         <div class="nome-produto">
                             <p class="nome-produto">PC Gamer Fast White + HeadSet</p>
@@ -227,19 +188,19 @@
         <div class="div-footer-config">
             <div class="div-informacoes">
                 <div class="div-media-pagamento">
-                    <img src="./img/logo.svg" alt="Imagem logo da empresa.">
+                    <img src="/images/logo.svg" alt="Imagem logo da empresa.">
                     <div class="div-social">
                         <ul>
-                            <li><a href="#"><img src="./img/img-facebook.svg" alt="Imagem logo facebook"></a></li>
-                            <li><a href="#"><img src="./img/img-twitter.svg" alt="Imagem logo twitter"></a></li>
-                            <li><a href="#"><img src="./img/img-instagram.svg" alt="Imagem logo instagrm"></a></li>
-                            <li><a href="#"><img src="./img/img-youtube.svg" alt="Imagem logo youtube"></a></li>
-                            <li><a href="#"><img src="./img/img-linkedin.svg" alt="Imagem logo linkedin"></a></li>                            
+                            <li><a href="#"><img src="/images/img-facebook.svg" alt="Imagem logo facebook"></a></li>
+                            <li><a href="#"><img src="/images/img-twitter.svg" alt="Imagem logo twitter"></a></li>
+                            <li><a href="#"><img src="/images/img-instagram.svg" alt="Imagem logo instagrm"></a></li>
+                            <li><a href="#"><img src="/images/img-youtube.svg" alt="Imagem logo youtube"></a></li>
+                            <li><a href="#"><img src="/images/img-linkedin.svg" alt="Imagem logo linkedin"></a></li>                            
                         </ul>
                     </div>
                     <div class="div-forma-pagamento">
                         <h3>Forma de Pagamento</h3>
-                        <img src="./img/boleto.svg" alt="Imagem código de barra.">
+                        <img src="/images/boleto.svg" alt="Imagem código de barra.">
                     </div>
                 </div>
                 <div class="div-fale-conosco-horarios">
