--- a/public/stylesheets/pedido_concluido.css
+++ b/public/stylesheets/pedido_concluido.css
@@ -11,102 +11,58 @@
     font-family: 'Rajdhani', sans-serif;
 }
 
-main .pedido {
-    margin-bottom: 20px;
-    width: 100%;
+main .main-pedido-concluido {
+    display: flex;
 }
 
 main .conteudo {
+    display: flex;
+    margin: 5px;
+    margin-bottom: 20px;
     justify-content: center;
+    box-shadow: 2px 1px 5px 2px #888;
+}
+
+main .conteudo .div-pedido-concluido {
+    justify-items: center;
+    font-weight: bold;
+    width: 100%;
+    padding: 10px;
 }
 
 main .pedido-concluido {
-    display: flex;
-    justify-content: center;
-    font-size: 2rem;
-}
-
-main .pedido .pedido-concluido .div-pedido-concluido {
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-    width: 50%;
-    padding: 5px;
-    margin-top: 20px;
+    text-align: center;
     background-color: rgb(233, 231, 227);
-}
-
-main .resumo-informacoes-pedido {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    width: 50%;
-    margin-left: 375px;
-}
-
-main .resumo-informacoes-pedido .informacoes-pedido .div-informacoes-pedido {
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    
-}
-
-main .pedido .resumo-informacoes-pedido .resumo-pedido {
-    display: flex;
-    margin-bottom: 20px;
-    
-}
-
-main .pedido .pedido-concluido .div-informacoes-pedido {
-    display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    
-}
-
-main .boleto {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-}
-
-main .boleto .link-gerar-boleto {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-
-}
-
-main .boleto .link-gerar-boleto .btn-gerar-boleto {
-    display: flex;
-    border-radius: 10px;
-    width: 50%;
-    justify-content: center;
     padding: 10px;
-    font-size: 0.5rem;
-    font-weight: bold;
-    font-style: normal;
+}
+
+main .realizado-com-sucesso {
+    text-align: center;
+}
+
+main .informacoes-pedido {
+    text-align: left;
+}
+
+main .btn-gerar-boleto {
+    text-align: center;
+    background-color: rgb(233, 231, 227);
+    padding: 10px;
+    border-bottom: 20px;
     cursor: pointer;
     transition: 0.3s;
-    background-color: rgb(195, 194, 201);
+}
+
+main .main-pedido-concluido .btn-gerar-boleto :hover {
+    background-color: #ed7d31;
+}
+
+
+a:link {
+    color: black;
     text-decoration: none;
 }
 
-main .pedido .boleto .link-gerar-boleto .btn-gerar-boleto:hover {
-    background-color: rgb(114, 114, 209);
-}
-
-main .pedido .boleto .link-gerar-boleto .btn-gerar-boleto p {
-    font: color black;
-}
-
-a:link {
-    cursor: pointer;
-    font-style: black;
-
-}
 
 /******************* @media ****************************/
 
