--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -2,7 +2,70 @@
 
 /*** Main ***/
 
-#login-container{
+.main-cadastro form{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin: auto;
+    margin-bottom: 30px;
+    box-shadow: 3px 2px 10px 4px #888;
+    padding: 40px;
+    border-radius: 7px;
+
+}
+
+.main-cadastro form h2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size:1.25rem;
+    text-align: center;
+    
+}
+
+.main-cadastro form h2 span{
+    margin-right: 5px;
+}
+
+.main-cadastro form label{
+    margin-bottom: 5px;
+
+    
+}
+
+.main-cadastro form input{
+    border-radius: 10px;
+    border: 1px solid #999;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#botao-cadastro{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    color: white;
+    background-color: #00A000;
+    cursor: pointer;
+    border: 1px solid #00A000;
+    transition: 0.3s;
+    margin-top: 10px;
+    }
+
+    #botao-cadastro:hover{
+     background-color: white;
+     color:#00A000;
+        
+    }
+
+    
+
+/***#login-container{
     width: 350px;
     border: none;
     height: 500px;
@@ -42,7 +105,7 @@ border-radius: 20px;
 color: #323232;
 background-color: #00A000;
 cursor: pointer;   
-}
+}/***
 
 
 /************/
