--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -2,7 +2,64 @@
 
 /*** Main ***/
 
-#login-container{
+.main-login form{
+    width: 300px;
+    padding: 30px;
+    margin: auto;
+    margin-bottom: 100px;
+    box-shadow: 3px 2px 10px 4px #888;
+    border-radius: 8px;
+
+}
+
+.main-login form input{
+    border: 1px solid #999;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    border-radius: 10px;
+    margin-bottom: 15px;
+
+}
+.main-login form label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 6px;
+    text-align: left;
+    }
+
+.main-login form label span{
+    margin-right: 5px;
+}
+
+.main-login form .botao-login-entrar{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    color: white;
+    background-color: #00A000;
+    cursor: pointer;
+    }
+    
+    .main-login form .botao-login-criar_conta{
+    color: #F59E3B;
+    margin-left:35px;
+}
+
+
+
+
+
+
+
+
+
+/***.login-container{
     width: 350px;
     border: none;
     height: 250px;
@@ -10,7 +67,7 @@
     margin: 30%;
 }
 
-#form{
+.form{
 
 
 }
@@ -28,7 +85,7 @@ label{
 }
 
 
-#botao-login-entrar{
+.botao-login-entrar{
 text-align: center;
 text-transform: uppercase;
 font-weight: bold;
@@ -43,11 +100,11 @@ cursor: pointer;
    
 }
 
-#botao-login-criar_conta{
+.botao-login-criar_conta{
 color: #F59E3B;
 
 
-}
+}/***
 
 
 
